# weirding

./: .gitignore  .mcp.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  ETHOS.md  LICENSE  README.md  SETUP.md  TEMPLATE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.claude/: settings.json
.claude/agents/: performance-profiler.md  planner.md  researcher.md  validator.md
.claude/commands/: adr.md  benchmark.md  canary.md  careful.md  changelog.md  configure.md  context-restore.md  context-save.md  debug.md  ideate.md  init.md  plan.md  quality.md  research.md  retro.md  review.md  security.md  ship.md  test.md
.claude/hooks/: check-careful.sh  inject_claude_md.sh  post-stop-reminder.sh
.claude/memory/: MEMORY.md
.claude/plans/: feat-phase-03-xsd-support.md  feat-phase-05-ecosystem-interop.md  feat-phase-06-reverse-edges.md  main.md  melange-docs-upgrade-instructions.md  naming-and-identity.md  refactor-readability-improvements.md
.claude/skills/adr-authoring/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/canary/: SKILL.md
.claude/skills/careful/: SKILL.md
.claude/skills/changelog/: SKILL.md
.claude/skills/configure/: SKILL.md
.claude/skills/context-restore/: SKILL.md
.claude/skills/context-save/: SKILL.md
.claude/skills/debugging/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/dev-loop/: SKILL.md
.claude/skills/ideation/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/planning/: SKILL.md
.claude/skills/quality-check/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/retro/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.hypothesis/: .gitignore
.hypothesis/constants/: 168c08465fef0f16  2d5357fe005e95d9  32a49779edcbd361  37f4b659b67e59b0  3b4635869b62a35e  547180f629ca6c1c  7bc01e8ff4fdb48f  7db0610b2afcfc60  f172e6a30d51d0b4  fb3472435d904142
.hypothesis/examples/04e6b3400353b141/: 2dad50d17bc2311f
.hypothesis/examples/2dad50d17bc2311f/: 0356a1cdaed295e7  1d68c8e0f229524f  3f7b2f5b80583695  53e22ba767674ce2  542da63ea2e3d873  61b59bb1a3340e34  67dfa562a884a73b  91e1094aff021e97  999f580bbd2569de  (+9 more)
.hypothesis/tmp/: tmpu8nsmpaf  tmpw48tj0rw
adr/: index.html
adr/0001-schema-annotation-convention/: index.html
adr/0002-json-schema-ir-as-public-api/: index.html
adr/0003-validatable-protocol/: index.html
adr/0004-json-schema-to-pydantic-engine/: index.html
adr/0005-x-weirding-item-tag/: index.html
adr/0006-xsd-support-library-and-security-posture/: index.html
adr/0007-type-checking-adoption/: index.html
adr/0008-mkdocs-material-documentation-toolchain/: index.html
adr/0009-pypi-oidc-trusted-publishing/: index.html
adr/0010-schema-export-helper/: index.html
adr/0011-model-description-propagation/: index.html
adr/0012-reverse-edge-fungibility/: index.html
adr/template/: index.html
api/: index.html
docs/: api.md  index.md
docs/adr/: 0001-schema-annotation-convention.md  0002-json-schema-ir-as-public-api.md  0003-validatable-protocol.md  0004-json-schema-to-pydantic-engine.md  0005-x-weirding-item-tag.md  0006-xsd-support-library-and-security-posture.md  0007-type-checking-adoption.md  0008-mkdocs-material-documentation-toolchain.md  0009-pypi-oidc-trusted-publishing.md  0010-schema-export-helper.md  0011-model-description-propagation.md  0012-reverse-edge-fungibility.md  README.md  template.md
docs/integrations/: databricks-pyspark.md  langchain.md  open-weight.md  openai-azure.md
docs/planning/: PROJECT_ROADMAP.md
integrations/databricks-pyspark/: index.html
integrations/langchain/: index.html
integrations/open-weight/: index.html
integrations/openai-azure/: index.html
planning/PROJECT_ROADMAP/: index.html
search/: search_index.json
src/weirding/: __init__.py  _decompile.py  _exceptions.py  _export.py  _introspect.py  _itemtag.py  _models.py  _parser.py  _refs.py  _schema.py  _serializers.py  _types.py  prompt.py
tests/: test_decompile.py  test_decompile_pbt.py  test_export.py  test_fungibility_pbt.py  test_integration.py  test_introspect.py  test_introspect_pbt.py  test_models.py  test_parser.py  test_prompt.py  test_schema.py  test_schema_pbt.py  test_serializers.py  test_xsd.py
(+16 files in other folders)
