[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weirding"
version = "0.1.0"
description = "XML ↔ Pydantic v2 conversion for structured AI output workflows"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "lxml>=4.9.2",
    "json-schema-to-pydantic>=0.4",
]

[project.optional-dependencies]
xsd = []
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "lxml-stubs>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weirding"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
