[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weirding"
version = "0.2.0"
description = "XML ↔ Pydantic v2 conversion with provider-ready structured-output interop (OpenAI/Azure, Databricks, vLLM/Ollama, LangChain, Claude)"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ben Lin", email = "blin7.webdev@gmail.com" }]
keywords = ["xml", "pydantic", "llm", "structured-output", "ai", "claude", "xsd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "pydantic>=2.13.4",
    "lxml>=6.1.1",
    "json-schema-to-pydantic>=0.4.7,<1",
]

[project.optional-dependencies]
xsd = ["xmlschema>=3.0"]
docs = [
    "mkdocs-material>=9.7,<10",
    "mkdocstrings[python]>=0.28",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis>=6.100",
    "ruff>=0.15.15",
    "lxml-stubs>=0.5",
    "weirding[xsd]",
    "pyright>=1.1.390,<2",
]

[project.urls]
Homepage = "https://github.com/yogs0ddhoth/weirding"
Documentation = "https://yogs0ddhoth.github.io/weirding/"
Repository = "https://github.com/yogs0ddhoth/weirding"
Changelog = "https://github.com/yogs0ddhoth/weirding/blob/main/CHANGELOG.md"

[tool.hypothesis]
# Hypothesis auto-detects CI=true environment variable automatically.
# No explicit profile configuration required here.

[tool.hatch.build.targets.wheel]
packages = ["src/weirding"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "--cov=weirding", "--cov-report=term-missing", "--cov-fail-under=90"]
markers = ["pbt: property-based tests (run with hypothesis; exclude with -k 'not pbt')"]
